Edicion de contenido

--- a/src/app/components/serv-home/serv-home.component.html
+++ b/src/app/components/serv-home/serv-home.component.html
@@ -12,7 +12,7 @@
             <li>Parque - Juegos de jardin.</li>
             <li>Ventilador de pie y techo.</li>
             <li>Cocina totalmente equipada.</li>
-            <li>Microondas - Heladera - Anafe.</li>
+            <li>Microondas - Heladera - Cocina.</li>
         </ul>
     </div>
     <div class="serv-list-img">
