--- a/src/app/components/tipologias/tipologias.component.html
+++ b/src/app/components/tipologias/tipologias.component.html
@@ -17,7 +17,7 @@
                 <li>2/3 camas individuales en sala.</li>
                 <li>Salida independiente al parque</li>
                 <li>Ventilador de pie y techo</li>
-                <li>Calefaccion a leña</li>
+                <li>Acceso a la Pileta</li>
                 <li>Cochera cubierta con porton</li>
             </ul>
         </div> 
@@ -34,7 +34,7 @@
                 <li>4 camas individuales.</li>
                 <li>Jardin privado.</li>
                 <li>Ventilador de pie y techo.</li>
-                <li>Calefaccion a leña.</li>
+                <!-- <li>Calefaccion a leña.</li> -->
                 <li>Microondas - Heladera - Horno.</li>
                 <li>Cochera cubierta con porton.</li>
             </ul>
